+ added home page placeholder

--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
     <div class="header__logo">
       <a href="/">
   <div class="logo">
-    EYAN&#39;S_CREATIONS
+    EYAN MOMOH
   </div>
 </a>
 
@@ -171,6 +171,11 @@
 
   <div class="content">
     
+  
+    <div class="index-content ">
+      <h1 id="home">Home</h1>
+
+    </div>
   
   <div class="posts">
     
