--- a/public/projects/first-post-project/my-first-post/index.html
+++ b/public/projects/first-post-project/my-first-post/index.html
@@ -114,7 +114,7 @@
     <div class="header__logo">
       <a href="/">
   <div class="logo">
-    EYAN&#39;S_CREATIONS
+    EYAN MOMOH
   </div>
 </a>
 
