--- a/public/devlogs/lift00/index.html
+++ b/public/devlogs/lift00/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   
-    <title>Lift00 :: Eyan&#39;s_Creations</title>
+    <title>Lift00 :: </title>
   
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -82,7 +82,7 @@
 <meta property="og:description" content=" [Description] this new movement system makes it almost feel like quake live movement. momentum acquired!
 [Screenshots] [Code] # Source-Like Movement func _ready: var h_vel = velocity h_vel.y = 0 var current_speed_limit = SPRINT_SPEED if Input.is_action_pressed(&#34;sprint&#34;) else SPEED_DEFAULT if is_on_floor(): # --- Ground Movement --- # Apply friction var speed = h_vel.length() if speed &gt; 0: var drop = speed * friction * delta h_vel *= max(speed - drop, 0) / speed # Apply ground acceleration h_vel = _accelerate(h_vel, wish_dir, current_speed_limit, ground_accel, delta) else: # --- Air Movement --- # Use the _accelerate function for air movement too. # The key is the `air_strafe_speed` which dictates how much &#34;purchase&#34; your strafe has. h_vel = _accelerate(h_vel, wish_dir, air_strafe_speed, air_accel, delta) velocity.x = h_vel.x velocity.z = h_vel.z # --- APPLY MOVEMENT --- move_and_slide() # --- POST-MOVEMENT JUICE --- var cam_tilt_input_dir = Input.get_vector(&#34;move_left&#34;,&#34;move_right&#34;,&#34;move_forward&#34;,&#34;move_backward&#34;,) cam_tilt(cam_tilt_input_dir.x, delta) weapon_tilt(cam_tilt_input_dir.x, cam_tilt_input_dir.y, delta) jump_weapon_tilt(delta) weapon_bob(velocity.length(), delta) if footstep_component: footstep_component.update_state(is_on_floor(), velocity, delta) func _accelerate(current_velocity: Vector3, wish_dir: Vector3, wish_speed: float, accel: float, delta: float) -&gt; Vector3: var current_speed_in_wish_dir = current_velocity.dot(wish_dir) var add_speed = wish_speed - current_speed_in_wish_dir if add_speed &lt;= 0: return current_velocity var accel_speed = accel * delta * wish_speed accel_speed = min(accel_speed, add_speed) return current_velocity &#43; wish_dir * accel_speed " />
 <meta property="og:url" content="//localhost:1313/devlogs/lift00/" />
-<meta property="og:site_name" content="Eyan&#39;s_Creations" />
+<meta property="og:site_name" content="" />
 
   <meta property="og:image" content="//localhost:1313/og-image.png">
 
