--- a/public/devlogs/test-log-for-test-project/index.html
+++ b/public/devlogs/test-log-for-test-project/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   
-    <title>Test Log for Test Project :: Eyan&#39;s_Creations</title>
+    <title>Test Log for Test Project :: </title>
   
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -82,7 +82,7 @@
 <meta property="og:description" content="wow just starting&hellip; but wow
 " />
 <meta property="og:url" content="//localhost:1313/devlogs/test-log-for-test-project/" />
-<meta property="og:site_name" content="Eyan&#39;s_Creations" />
+<meta property="og:site_name" content="" />
 
   <meta property="og:image" content="//localhost:1313/og-image.png">
 
