--- a/public/feed/index.html
+++ b/public/feed/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   
-    <title>Feed :: Eyan&#39;s_Creations</title>
+    <title>Feed :: </title>
   
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -82,7 +82,7 @@
 <meta property="og:description" content="A chronological feed of all new projects and development logs.
 " />
 <meta property="og:url" content="//localhost:1313/feed/" />
-<meta property="og:site_name" content="Eyan&#39;s_Creations" />
+<meta property="og:site_name" content="" />
 
   <meta property="og:image" content="//localhost:1313/og-image.png">
 
@@ -95,7 +95,7 @@
 
 
 
-  <link href="/feed/index.xml" rel="alternate" type="application/rss+xml" title="Eyan&#39;s_Creations" />
+  <link href="/feed/index.xml" rel="alternate" type="application/rss+xml" title="" />
 
 
 
