--- a/public/projects/test-project-1/index.html
+++ b/public/projects/test-project-1/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
   
-    <title>Test Project 1 :: Eyan&#39;s_Creations</title>
+    <title>Test Project 1 :: </title>
   
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="A brief, exciting one-liner about this project." />
+<meta name="description" content="test project go burrrr" />
 <meta name="keywords" content="" />
 
   <meta name="robots" content="noodp" />
@@ -78,9 +78,9 @@
 <meta property="og:locale" content="en" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Test Project 1">
-<meta property="og:description" content="A brief, exciting one-liner about this project." />
+<meta property="og:description" content="test project go burrrr" />
 <meta property="og:url" content="//localhost:1313/projects/test-project-1/" />
-<meta property="og:site_name" content="Eyan&#39;s_Creations" />
+<meta property="og:site_name" content="" />
 
   <meta property="og:image" content="//localhost:1313/og-image.png">
 
